# ricochet-robots-cli

./: README.md  cli.py  debug_board.py  game.py  maps.py  models.py  pyproject.toml  quadrant.py  ricochet_gui.spec  run_gui.py  sessions.py
domain/: game.py  models.py  quadrant.py
frontend/: editor.html  index.html
puzzles/tutorial/: nivel_1.json
src/ricochet/: cli.py
src/ricochet/backend/app/: main.py  store.py
src/ricochet/backend/app/api/routes/: editor.py  game.py  practice.py  tutorial.py
src/ricochet/backend/app/data/puzzles/tutorial/: nivel_1.json  nivel_2.json  nivel_3.json  nivel_4.json  nivel_5.json  nivel_6.json
src/ricochet/backend/app/schemas/: declare_request.py  game_request.py  move_request.py  practice_request.py  puzzle_data.py
src/ricochet/backend/app/services/: game_service.py  practice_service.py  serializer.py
src/ricochet/domain/: game.py  maps.py  practice_session.py  puzzle_loader.py  quadrant.py  sessions.py
src/ricochet/domain/sessions/: __init__.py  tutorial_content.py  tutorial_session.py
src/ricochet/gui/: animation.py  game_window.py  input_handler.py  renderer.py  sounds.py  ui.py
src/ricochet/gui_pygame/: __init__.py  animation.py  game_window.py  input_handler.py  main.py  renderer.py  ui.py
tests/: test_bumper_illegal.py  test_session_illegal_move.py
tools/: debug_board.py
