   [build-system]
   requires = ["setuptools>=61.0"]
   build-backend = "setuptools.build_meta"
 
   [project]
   name = "ricochet"
   version = "0.1.0"
   description = "Ricochet game"
   readme = "README.md"
   requires-python = ">=3.10"
   dependencies = ["pygame>=2.1.0"]

[project.scripts]
ricochet-gui = "ricochet.gui.main:main"
 
   [tool.setuptools]
   package-dir = {"" = "src"}
 
   [tool.setuptools.packages.find]
   where = ["src"]
 
   [tool.pytest.ini_options]
   testpaths = ["tests"]
pythonpath = ["src"]